src/test/deca/syntax/invalid/synt/string_multiline.deca
{
    String s = "Bonjour";
    String s1 = "Sa\"lut";
    String s2 = "bon
                jour";
}
